<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/paper"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_text_guess"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:inputType="textPersonName" />

    <!--        style="@style/Widget.AppCompat.Button.Colored"-->

    <Button
        android:id="@+id/btnOpen"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/edit_text_guess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshapeeasy"
        android:text="GO!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/edit_text_guess"
        android:elevation="12dp"
        android:gravity="center"
        android:text="Guess the Song"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="30sp" />

</RelativeLayout>