...
    android:theme="@style/Base.V21.Theme.AppCompat.Dialog"
    android:background="@drawable/discoball"
    tools:showIn="@layout/activity_how_to_play">


    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendMessage"
        android:text="return to main menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="250dp"
...
